force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Transaction__c/RTL_Campaign_To_HQ_Callout_Transaction__c.object-meta.xml
<CustomObject>
    <label>Campaign To HQ Callout Transaction</label>
    <nameField>
        <displayFormat>CCT-{0000}</displayFormat>
        <label>RTL Campaign  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign To HQ Callout Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>