force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Transaction__c/fields/RTL_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Called Date</label>
    <type>DateTime</type>
</CustomField>