force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Transaction__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign To HQ Callout Transactions</relationshipLabel>
    <relationshipName>Campaign_To_HQ_Callout_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>