force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Transaction__c/fields/RTL_Campaign_To_HQ_Callout_Log__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_To_HQ_Callout_Log__c</fullName>
    <label>Campaign To HQ Callout Log</label>
    <referenceTo>RTL_Campaign_To_HQ_Callout_Log__c</referenceTo>
    <relationshipLabel>Campaign To HQ Callout Transactions</relationshipLabel>
    <relationshipName>Campaign_To_HQ_Callout_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>