force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Transaction__c/fields/RTL_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Status_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>